Fixed the alignment :3

--- a/src/css/global.css
+++ b/src/css/global.css
@@ -110,6 +110,7 @@ code {
 }
 
 .navHeader {
+  display: flex;
   align-items: center;
   max-width: 120px;
   height: auto;
